<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragment.payment.PayStackFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/textView70"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_fragment_title_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.092"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/textView71"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_details_secured"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="@+id/textView70"
            app:layout_constraintTop_toBottomOf="@+id/textView70"
            app:layout_constraintVertical_bias="0.066" />

        <TextView
            android:id="@+id/textView72"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView70"
            app:layout_constraintTop_toBottomOf="@+id/textView71"
            app:layout_constraintVertical_bias="0.098" />

        <EditText
            android:id="@+id/et_card_number"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:digits="0123456789- "
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:maxLength="22"
            android:hint="@string/asterics"
            android:background="@drawable/et_input_with_border_pay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView72"
            app:layout_constraintTop_toBottomOf="@+id/textView72"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="40dp" />


        <TextView
            android:id="@+id/textView73"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/expiry"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_card_number"
            app:layout_constraintTop_toBottomOf="@+id/et_card_number"
            app:layout_constraintVertical_bias="0.0" />


        <EditText
            android:id="@+id/et_expiry"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/et_input_with_border_pay"
            android:hint="@string/mm_yy"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/et_cvv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView73"
            app:layout_constraintTop_toBottomOf="@+id/textView73"
            app:layout_constraintVertical_bias="0.0"
            android:paddingLeft="20dp"
            android:paddingRight="0dp" />

        <TextView
            android:id="@+id/textView80"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cvv"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView73"
            app:layout_constraintEnd_toEndOf="@+id/et_card_number"
            app:layout_constraintHorizontal_bias="0.554"
            app:layout_constraintStart_toEndOf="@+id/textView73"
            app:layout_constraintTop_toTopOf="@+id/textView73"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/et_cvv"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@drawable/et_input_with_border_pay"
            android:digits="0123456789"
            android:hint="@string/asterics_3"
            android:inputType="number"
            android:maxLength="3"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_card_number"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/textView80"
            app:layout_constraintTop_toBottomOf="@+id/textView80"
            app:layout_constraintVertical_bias="0.0"
            android:paddingLeft="20dp"
            android:paddingRight="0dp" />

        <Button
            android:id="@+id/btn_pay"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_border_blue_bg"
            android:text=""
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_cvv"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_expiry"
            app:layout_constraintTop_toBottomOf="@+id/et_expiry"
            app:layout_constraintVertical_bias="0.243" />

        <ProgressBar
            android:id="@+id/loading_pay_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            app:layout_constraintHorizontal_bias="0.479"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_expiry"
            app:layout_constraintVertical_bias="0.249" />

        <ImageView
            android:id="@+id/imageViewDeleteAll"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_padlock"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.279"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_pay"
            app:layout_constraintVertical_bias="0.478" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/secured_by_paystack"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewDeleteAll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageViewDeleteAll"
            app:layout_constraintTop_toTopOf="@+id/imageViewDeleteAll"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="10dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>